Move fixed background to img to work on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -35,7 +35,7 @@ $desktop-width: 1200px;
 }
 
 html {
-  background: $blue url('../images/me.png') top right no-repeat fixed;
+  background: $blue;
   color: $black;
   font-size: 18px;
   font-family: Georgia, serif
@@ -82,6 +82,12 @@ h4 {
   color: $black;
   margin: 0;
   font-size: 20px;
+}
+
+.me {
+  position: fixed;
+  top:0;
+  right:0;
 }
 
 #resume {
